Tests and examples
Added a few new tests, a benchmark and a couple of examples.

Added shared CLion configurations.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ description = "AOBscan is a library for multi-threaded AOB memory scanning."
 
 [dependencies]
 num_cpus = "1.13"
+
+[dev-dependencies]
+rand = "0.8"
